# pdf_toc_gen

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
src/pdftoc/: __init__.py  arxiv.py  bookmarks.py  cli.py  core.py  models.py  ocr.py  section_headers.py  toc_extraction.py
src/pdftoc/data/: academic_vocabulary.yaml  body_text_starters.yaml
tests/: conftest.py  pdf_test_cases.py  test_pdftoc.py
tests/fixtures/: .gitignore
tests/fixtures/input/: README.md
tests/fixtures/output/: README.md
